# sjtu_shuzishanhai_pingpang_balance

./: README.md
main_yolo_service/: CMakeLists.txt  package.xml
main_yolo_service/msg/: YoloDetection.msg
main_yolo_service/scripts/: detection_server.py  detection_server_old.py
main_yolo_service/srv/: mainYolo.srv
pingpang/: 2025-03-16_16-17-05.txt  2025-03-16_16-37-25.txt  detect.py  pingpang.ipynb  rotation.json  rotation.py
pingpang/pingpang_openvino_model/: metadata.yaml  pingpang.xml
