<?xml version="1.0"?>
<package format="2">
  <name>main_yolo_service</name>
  <version>0.0.0</version>
  <description>YOLO object detection and classification service</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 基础依赖 -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <!-- 消息生成依赖 -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- 可选传感器依赖 -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
